2026-02-11 02:32:09	migrate python project packaging to pyproject + uv workflow with uv-managed lockfile